fix: sidebar content height css to handle overflow

--- a/frontend/src/components/Sidebar/Sidebar.css
+++ b/frontend/src/components/Sidebar/Sidebar.css
@@ -29,7 +29,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100%;
+  height: 90%;
   overflow-y: auto;
   margin-top: 0.5rem;
 }
